@startuml

Move <|-- BombMove
Move <|-- BombStrippedMove
Move <|-- BombWrappedMove
Move <|-- CandyMove
Move <|--L TwoBombMove
Move <|--L TwoStripedMove
Move <|--L TwoWrappedMove
Move <|-- WrappedStripedMove

abstract class Move{
 + Move(Gride grid)
 + void setCoords(int i1, int j1, int i2, int j2)
 + boolean isValid()
 # boolean internalValidation()
 # Element get(int i, int j)
 # void clearContent(int i, int j)
 # void setContent(int i, int j, Element e)
 # void wasUpdated()
 + {abstract} void removeElements()
}

class BombMove{
 + BombMove(Grid grid)
 + void removeElements()
}

class BombStrippedMove{
 + BombStrippedMove(Gride grid)
 + void removeElements()
 - Candy createStriped(CandyColor color)
}

class BombWrappedMove{
 + BombWrappedMove(Grid grid)
 + void removeElements()
}

class CandyMove{
 + CandyMove(Grid grid)
 + boolean internalValidation()
 + void removeElements()
}

enum Direction{
  UP
  DOWN
  LEFT
  RIGHT
}

class MoveMaker{
 + MoveMaker(Grid grid)
 - void initMap()
 +  Move getMove(int i1, int j1, int i2, int j2)
}

class TwoBombMove{
 + TwoBombMove(Grid grid)
 + void removeElements()
}

class TwoStripedMove{
 + TwoStripedMove(Grid grid)
 + void removeElements()
}

class TwoWrappedMove{
 + TwoWrappedMove(Grid grid)
 + void removeElements()
}

class WrappedStripedMove{
 + WrappedStripedMove(Grid grid)
 + void removeElements()
}

@enduml